<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/ActivityRegistrationButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_login_button" />

    <Button
        android:id="@+id/ActivityRegistrationButtonSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_signup_button" />

    <Button
        android:id="@+id/ActivityRegistrationButtonGuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_guest_button" />
</LinearLayout>