<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_page_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradient">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="360dp"
                android:layout_height="390dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/media_image"
                android:src="@android:drawable/title_bar"
                tools:src="@tools:sample/backgrounds/scenic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:orientation="horizontal">


                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/Widget.AppCompat.RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:clickable="false"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressBackgroundTint="@color/starTint"
                    android:rating="0"
                    android:saveEnabled="true"
                    android:stepSize="0.1" />

                <Button
                    android:id="@+id/ratingButton"
                    android:layout_width="125dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/rate" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/public_rating_bar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="4dp"
                    android:clickable="false"
                    android:isIndicator="true"
                    android:numStars="1"
                    android:progressTint="@color/yellow"
                    android:rating="1"
                    android:saveEnabled="true"
                    android:stepSize="1" />

                <TextView
                    android:id="@+id/publicRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/rate"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/numRatings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/numratings"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

            </LinearLayout>


            <TextView
                android:id="@+id/textView"
                android:layout_width="361dp"
                android:layout_height="36dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="24dp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="362dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:text="@string/genres"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="361dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:scrollbars="vertical"
                android:text="@string/summary_info"
                android:textColor="@color/white"
                android:textSize="20sp" />



            <TextView
                android:id="@+id/linksView"
                android:layout_width="362dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:autoLink="all"
                android:text="@string/links"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addToFavorites"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/favorite" />

                <Button
                    android:id="@+id/addToBookmarks"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/bookmark" />

                <Button
                    android:id="@+id/reviewButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/review" />
            </LinearLayout>

        </LinearLayout>
</ScrollView>
